fixed redirect link for entire app

--- a/pages/delivery_request_seeker/delivery_inprogress_rider.html
+++ b/pages/delivery_request_seeker/delivery_inprogress_rider.html
@@ -10,12 +10,12 @@
 </head>
 <body>
     <header>
-        <div class="logo">
+        <div class="logo" onclick="navigate_back_home()">
             <img src="./../../img/Favio.png" alt="">
         </div>
         <nav>
             <ul>
-                <li><a href="./../delivery_request_seeker/delivery_inprogress_rider.html">Home</a></li>
+                <li><a href="./../delivery_request_seeker/delivery_request_rider.html">Home</a></li>
                 <li><a href="./../history/history.html">History</a></li>
                 <li><a href="../about_us/about_us.html">About Us</a></li>
                 <li><a href="../settings/settings.html">Settings</a></li>
