--- a/pages/delivery_request_seeker/delivery_request_seeker.html
+++ b/pages/delivery_request_seeker/delivery_request_seeker.html
@@ -28,15 +28,14 @@
 
 
     <header>
-        <div class="logo">
-            <a href="./../delivery_request_seeker/delivery_inprogress_rider.html">
-                <img src="./../../img/Favio.png" alt="Favio"></a>
+        <div class="logo" onclick="navigate_back_home()">
+                <img src="./../../img/Favio.png" alt="Favio">
         </div>
 
         <nav class="menu-main">
             <ul>
                 <li>
-                    <a href="./../delivery_request_seeker/delivery_inprogress_rider.html">
+                    <a href="./../delivery_request_seeker/delivery_inprogress_seeker.html">
                         <span class="visually-hidden-text">Home</span>
                     </a>
                 </li>
@@ -54,7 +53,7 @@
                 </li>
 
                 <li>
-                    <a href="">
+                    <a href="./../settings/settings.html">
                         <span class="visually-hidden-text">Settings</span>
                     </a>
                 </li>
@@ -68,7 +67,7 @@
 
     <nav class="menu-mobile">
         <ul>
-            <li><a href="./../delivery_request_seeker/delivery_inprogress_rider.html">Home</a></li>
+            <li><a href="./../delivery_request_seeker/delivery_inprogress_seeker.html">Home</a></li>
             <li><a href="./../history/history.html">History</a></li>
             <li><a href="../about_us/about_us.html">About Us</a></li>
             <li><a href="">Settings</a></li>
