--- a/pages/about_us/about_us.html
+++ b/pages/about_us/about_us.html
@@ -21,14 +21,14 @@
 
 <body>
     <header>
-        <div class="logo">
+        <div class="logo" onclick="navigate_back_home()">
             <img src="./../../img/Favio.png" alt="Favio">
         </div>
 
         <nav class="menu-main">
             <ul>
                 <li>
-                    <a href="./../delivery_request_seeker/delivery_inprogress_rider.html">
+                    <a onclick="navigate_back_home()">
                         <span class="visually-hidden-text">Home</span>
                     </a>
                 </li>
@@ -66,8 +66,10 @@
         </div>
         <div class="favio_AboutUsArrow">
             <!-- add icon and add css here -->
-            <span>back</span>
-
+            <a onclick="navigate_back()">
+                <i class="fa-solid fa-chevron-left"></i><span> back</span></button>
+            </a>
+           
         </div>
         <div class="favio_aboutUsMainDiv">
 
