--- a/pages/delivery_request_seeker/delivery_request_rider.html
+++ b/pages/delivery_request_seeker/delivery_request_rider.html
@@ -27,15 +27,14 @@
 
 
     <header>
-        <div class="logo">
-            <a href="./../delivery_request_seeker/delivery_inprogress_rider.html">
-                <img src="./../../img/Favio.png" alt="Favio"></a>
+        <div class="logo" onclick="navigate_back_home()">
+                <img src="./../../img/Favio.png" alt="Favio">
         </div>
 
         <nav class="menu-main">
             <ul>
                 <li>
-                    <a href="./../delivery_request_seeker/delivery_inprogress_rider.html">
+                    <a href="./../delivery_request_seeker/delivery_request_rider.html">
                         <span class="visually-hidden-text">Home</span>
                     </a>
                 </li>
@@ -53,7 +52,7 @@
                 </li>
 
                 <li>
-                    <a href="">
+                    <a href="../settings/settings.html">
                         <span class="visually-hidden-text">Settings</span>
                     </a>
                 </li>
