--- a/pages/history/history.html
+++ b/pages/history/history.html
@@ -20,14 +20,15 @@
 </head>
 <body>
     <header>
-        <div class="logo">
+        <div class="logo" onclick="navigate_back_home()">
             <img src="./../../img/Favio.png" alt="Favio">
         </div>
 
         <nav class="menu-main">
+    
             <ul>
                 <li>
-                    <a href="./../delivery_request_seeker/delivery_inprogress_rider.html">
+                    <a onclick="navigate_back_home()">
                         <span class="visually-hidden-text">Home</span>
                     </a>
                 </li>
@@ -56,6 +57,13 @@
             </ul>
         </nav>
     </header>
+    <div class="favio_AboutUsArrow">
+        <!-- add icon and add css here -->
+        <a onclick="navigate_back()">
+            <i class="fa-solid fa-chevron-left"></i><span> back</span></button>
+        </a>
+
+    </div>
 
     <div class="top-links">
         <ul>
