--- a/pages/settings/profile.html
+++ b/pages/settings/profile.html
@@ -22,14 +22,14 @@
 
 <body>
     <header>
-        <div class="logo">
+        <div class="logo" onclick="navigate_back_home()">
             <img src="./../../img/Favio.png" alt="Favio">
         </div>
 
         <nav class="menu-main">
             <ul>
                 <li>
-                    <a href="./../delivery_request_seeker/delivery_inprogress_rider.html">
+                    <a onclick="navigate_back_home()">
                         <span class="visually-hidden-text">Home</span>
                     </a>
                 </li>
@@ -62,7 +62,9 @@
         
         <div class="favio_AboutUsArrow">
             <!-- add icon and add css here -->
-            <span>back</span>
+            <a href="settings.html">
+                <i class="fa-solid fa-chevron-left"></i><span> back</span></button>
+            </a>
 
         </div>
 
