added active style for todays schedule

--- a/pages/delivery_request_seeker/delivery_request_rider.html
+++ b/pages/delivery_request_seeker/delivery_request_rider.html
@@ -94,7 +94,7 @@
                     Todays Schedule
                 </h4>
                 <ul class="change-request" id="change-request">
-                    <li><a href="#request" onclick="showRequests()">Request</a></li>
+                    <li class="active"><a href="#request" onclick="showRequests()">Request</a></li>
                     <li><a href="#scheduled" onclick="showScheduled()">Scheduled</a></li>
                     <li><a href="#in-progress" onclick="showInProgress()">In progress</a></li>
                     <li><a href="#complete" onclick="showCompleted()">Completed</a></li>
