Fixed back nabigation to the pages.

--- a/pages/history/history.html
+++ b/pages/history/history.html
@@ -59,7 +59,7 @@
     </header>
     <div class="favio_AboutUsArrow">
         <!-- add icon and add css here -->
-        <a onclick="navigate_back()">
+        <a href="javascript:history.back()">
             <i class="fa-solid fa-chevron-left"></i><span> back</span></button>
         </a>
 
