--- a/pages/settings/support.html
+++ b/pages/settings/support.html
@@ -64,7 +64,7 @@
     <main>
         <div class="favio_AboutUsArrow">
             <!-- add icon and add css here -->
-            <a href="settings.html">
+            <a href="javascript:history.back()">
                 <i class="fa-solid fa-chevron-left"></i><span> back</span></button>
             </a>
 
