--- a/pages/about_us/about_us.html
+++ b/pages/about_us/about_us.html
@@ -66,7 +66,7 @@
         </div>
         <div class="favio_AboutUsArrow">
             <!-- add icon and add css here -->
-            <a onclick="navigate_back()">
+            <a href="javascript:history.back()">
                 <i class="fa-solid fa-chevron-left"></i><span> back</span></button>
             </a>
            
