--- a/pages/settings/profile.html
+++ b/pages/settings/profile.html
@@ -62,7 +62,7 @@
         
         <div class="favio_AboutUsArrow">
             <!-- add icon and add css here -->
-            <a href="settings.html">
+            <a href="javascript:history.back()">
                 <i class="fa-solid fa-chevron-left"></i><span> back</span></button>
             </a>
 
