--- a/pages/settings/settings.html
+++ b/pages/settings/settings.html
@@ -64,7 +64,7 @@
         <div class="favio_AboutUsArrow" >
             <!-- add icon and add css here -->
             <!-- change seeting, about, history -->
-            <a onclick="navigate_back()">
+            <a href="javascript:history.back()">
                 <i class="fa-solid fa-chevron-left"></i><span> back</span></button>
             </a>
         </div>
