--- a/pages/delivery_request_seeker/delivery_request_rider.html
+++ b/pages/delivery_request_seeker/delivery_request_rider.html
@@ -115,7 +115,7 @@
 
     </main>
 
-    <div class="request-div">
+    <!-- <div class="request-div">
         <div class="request-div-left">
             <img src="./../../img/bike.svg" style="width: 200px; max-height: 30px;">
             <p>Philippe Gabriel Hernandez</p>
@@ -132,7 +132,7 @@
             <button class="request-button">Requests</button>
             <p class="request-fee">$ 19.55 CAD</p>
         </div>
-    </div>
+    </div> -->
 
 
 </body>
