fix image for delivery request from seeker

--- a/pages/delivery_request_seeker/delivery_inprogress_rider.html
+++ b/pages/delivery_request_seeker/delivery_inprogress_rider.html
@@ -15,7 +15,7 @@
 
     <link rel="stylesheet" href="./../../css/templates/gridlayout.css">
 
-    <script src="./../../js/template/navigation" defer></script>
+    <script src="./../../js/template/navigation.js" defer></script>
 
     <link rel="manifest" href="../../app.webmanifest">
     <link href="./../../css/delivery_request_seeker/delivery_inprogress_rider.css" rel="stylesheet" />
@@ -30,7 +30,7 @@
         <nav class="menu-main">
             <ul>
                 <li>
-                    <a href="./../delivery_request_seeker/delivery_inprogress_seeker.html">
+                    <a href="./../delivery_request_seeker/delivery_request_rider.html">
                         <span class="visually-hidden-text">Home</span>
                     </a>
                 </li>
