--- a/pages/delivery_request_seeker/delivery_inprogress_seeker.html
+++ b/pages/delivery_request_seeker/delivery_inprogress_seeker.html
@@ -19,7 +19,7 @@
 
     <script src="https://kit.fontawesome.com/f9397e162d.js" crossorigin="anonymous"></script>
 
-    <script src="./../../js/template/navigation" defer></script>
+    <script src="./../../js/template/navigation.js" defer></script>
 
 
     <link href="./../../css/delivery_request_seeker/delivery_inprogress_seeker.css" rel="stylesheet" />
@@ -35,7 +35,7 @@
         <nav class="menu-main">
             <ul>
                 <li>
-                    <a href="./../delivery_request_seeker/delivery_inprogress_seeker.html">
+                    <a href="./../delivery_request_seeker/delivery_request_seeker.html">
                         <span class="visually-hidden-text">Home</span>
                     </a>
                 </li>
