--- a/pages/delivery_request_seeker/delivery_request_rider.html
+++ b/pages/delivery_request_seeker/delivery_request_rider.html
@@ -18,7 +18,7 @@
 
     <link rel="stylesheet" href="./../../css/templates/gridlayout.css">
 
-    <script src="./../../js/template/navigation" defer></script>
+    <script src="./../../js/template/navigation.js" defer></script>
 
     <link href="./../../css/delivery_request_seeker/delivery_request_driver.css" rel="stylesheet" />
 </head>
