--- a/pages/history/history.html
+++ b/pages/history/history.html
@@ -15,7 +15,7 @@
 
     <script src="https://kit.fontawesome.com/f9397e162d.js" crossorigin="anonymous"></script>
 
-    <script src="./../../js/template/navigation" defer></script>
+    <script src="./../../js/template/navigation.js" defer></script>
     <link href="./../../css/history/history.css" rel="stylesheet" />
 </head>
 <body>
