--- a/pages/settings/profile.html
+++ b/pages/settings/profile.html
@@ -15,7 +15,7 @@
 
     <script src="https://kit.fontawesome.com/f9397e162d.js" crossorigin="anonymous"></script>
 
-    <script src="./../../js/template/navigation" defer></script>
+    <script src="./../../js/template/navigation.js" defer></script>
     <link rel="stylesheet" href="../../css/settings/profile.css">
 
 </head>
