--- a/pages/settings/settings.html
+++ b/pages/settings/settings.html
@@ -18,7 +18,7 @@
 
     <script src="https://kit.fontawesome.com/f9397e162d.js" crossorigin="anonymous"></script>
 
-    <script src="./../../js/template/navigation" defer></script>
+    <script src="./../../js/template/navigation.js" defer></script>
 </head>
 
 <body>
