--- a/pages/settings/vehicle_settings.html
+++ b/pages/settings/vehicle_settings.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vehicle Settings</title>
     <link rel="manifest" href="../../app.webmanifest">
-    <script src="./../../js/template/navigation" defer></script>
+    <script src="./../../js/template/navigation.js" defer></script>
 </head>
 <body>
     <header>
