Added Loader and Bug Fixes

--- a/pages/delivery_request_seeker/delivery_request_seeker.html
+++ b/pages/delivery_request_seeker/delivery_request_seeker.html
@@ -25,6 +25,9 @@
 </head>
 
 <body>
+    <div class="loader">
+        <img src="./../../img/load-gif.gif" style="width: 100px; height:100px;"alt="">
+      </div>
 
 
     <header>
