--- a/pages/delivery_request_seeker/delivery_request_seeker.html
+++ b/pages/delivery_request_seeker/delivery_request_seeker.html
@@ -26,7 +26,7 @@
 
 <body>
     <div class="loader">
-        <img src="./../../img/load-gif.gif" style="width: 100px; height:100px;"alt="">
+        <img src="./../../img/loader.gif" style="width: 100px; height:100px;"alt="">
       </div>
 
 
@@ -153,8 +153,8 @@
                 </div>
 
                 <div id="delivery-info">
-                    <p> <strong>Distance: </strong> <span id="estimatedDistance">asdd<span> </p>
-                    <p> <strong>Estimated Time: </strong> <span id="estimatedTime">asdd<span> </p>
+                    <p> <strong>Distance: </strong> <span id="estimatedDistance"><span> </p>
+                    <p> <strong>Estimated Time: </strong> <span id="estimatedTime">.<span> </p>
                     <p> <strong>Total: $</strong> <span id="estimatedTotal"><span> </p>
 
                 </div>
