--- a/pages/delivery_request_seeker/delivery_inprogress_seeker.html
+++ b/pages/delivery_request_seeker/delivery_inprogress_seeker.html
@@ -131,8 +131,8 @@
                 </div>
 
                 <div id="delivery-info">
-                    <p> <strong>Distance: </strong> <span id="estimatedDistance">asdd<span> </p>
-                    <p> <strong>Estimated Time: </strong> <span id="estimatedTime">asdd<span> </p>
+                    <p> <strong>Distance: </strong> <span id="estimatedDistance"><span> </p>
+                    <p> <strong>Estimated Time: </strong> <span id="estimatedTime"><span> </p>
                     <p> <strong>Total: $</strong> <span id="estimatedTotal"><span> </p>
 
                 </div>
