refactored price code in inprogress_seeker.js and added active in html navbar

--- a/pages/about_us/about_us.html
+++ b/pages/about_us/about_us.html
@@ -41,7 +41,7 @@
 
                 <li>
                     <a href="../about_us/about_us.html">
-                        <span class="visually-hidden-text">About Us</span>
+                        <span class="active visually-hidden-text">About Us</span>
                     </a>
                 </li>
 
