--- a/pages/delivery_request_seeker/delivery_request_rider.html
+++ b/pages/delivery_request_seeker/delivery_request_rider.html
@@ -35,7 +35,7 @@
             <ul>
                 <li>
                     <a href="./../delivery_request_seeker/delivery_request_rider.html">
-                        <span class="visually-hidden-text">Home</span>
+                        <span class="active visually-hidden-text">Home</span>
                     </a>
                 </li>
 
