--- a/pages/settings/vehicle_settings.html
+++ b/pages/settings/vehicle_settings.html
@@ -35,7 +35,7 @@
 
                 <li>
                     <a href="../settings/settings.html">
-                        <span class="visually-hidden-text">Settings</span>
+                        <span class="active visually-hidden-text">Settings</span>
                     </a>
                 </li>
 
