--- a/pages/delivery_request_seeker/delivery_inprogress_seeker.html
+++ b/pages/delivery_request_seeker/delivery_inprogress_seeker.html
@@ -36,7 +36,7 @@
             <ul>
                 <li>
                     <a href="./../delivery_request_seeker/delivery_request_seeker.html">
-                        <span class="visually-hidden-text">Home</span>
+                        <span class="active visually-hidden-text">Home</span>
                     </a>
                 </li>
 
