--- a/pages/history/history.html
+++ b/pages/history/history.html
@@ -35,7 +35,7 @@
 
                 <li>
                     <a href="./../history/history.html">
-                        <span class="visually-hidden-text">History</span>
+                        <span class="active visually-hidden-text">History</span>
                     </a>
                 </li>
 
