--- a/pages/settings/support.html
+++ b/pages/settings/support.html
@@ -49,7 +49,7 @@
 
                 <li>
                     <a href="../settings/settings.html">
-                        <span class="visually-hidden-text">Settings</span>
+                        <span class="active visually-hidden-text">Settings</span>
                     </a>
                 </li>
 
