Add icons on the setting page and style back arrow

--- a/pages/settings/settings.html
+++ b/pages/settings/settings.html
@@ -76,42 +76,42 @@
             <ul>
                 <li>
                     <div class="favio_settingslogoandItem">
-                        <i class="fa-solid fa-code"></i>
+                        <img src="../../assets/icons/icon-prof.png" alt="profile icon">
                         <a href="profile.html">My Profile</a>
                     </div>
                     <i class="fa-solid fa-arrow-right visually-hidden-text"></i>
                 </li>
                 <li>
                     <div>
-                        <i class="fa-solid fa-code"></i>
+                        <img src="../../assets/icons/icon-history.png" alt="history icon">
                         <a href="../history/history.html">My History</a>
                     </div>
                     <i class="fa-solid fa-arrow-right visually-hidden-text"></i>
                 </li>
                 <li>
                     <div>
-                        <i class="fa-solid fa-code"></i>
+                        <img src="../../assets/icons/icon-vehicle-setting.png" alt="vehicle setting icon">
                         <a href="../settings/vehicle_settings.html">Vehicle Settings</a>
                     </div>
                     <i class="fa-solid fa-arrow-right visually-hidden-text"></i>
                 </li>
                 <li>
                     <div>
-                        <i class="fa-solid fa-code"></i>
+                        <img src="../../assets/icons/icon-support.png" alt="support icon">
                         <a href="../settings/support.html">Support</a>
                     </div>
                     <i class="fa-solid fa-arrow-right visually-hidden-text"></i>
                 </li>
                 <li>
                     <div>
-                        <i class="fa-solid fa-code"></i>
+                        <img src="../../assets/icons/icon-favio.png" alt="about us icon">
                         <a href="../about_us/about_us.html">About Us</a>
                     </div>
                     <i class="fa-solid fa-arrow-right visually-hidden-text"></i>
                 </li>
                 <li>
                     <div>
-                        <i class="fa-solid fa-code"></i>
+                        <img src="../../assets/icons/icon-logout.png" alt="log out icon">
                         <a onclick="logoutFunc(event)" href="../../index.html">Logout</a>
                     </div>
                     <i class="fa-solid fa-arrow-right visually-hidden-text"></i>
