Back arrow styling and adding images on signup and about us

--- a/pages/about_us/about_us.html
+++ b/pages/about_us/about_us.html
@@ -76,7 +76,8 @@
             <h2>ABOUT US</h2>
 
             <div class="favio_AboutUsGrid">
-                <div class="favio_aboutUs_image">
+                <div class="favio_aboutUs_image visually-hidden">
+                    <img src="../../assets/images/aboutus-img.png" alt="about us image">
                 </div>
                 <div class="favio_aboutUs_text">
                     <p>Favio can change the way you move things, it let’s you access the city like never before. We’re
