Added checkbox to enable and disable schedule date-time calendar

--- a/pages/delivery_request_seeker/delivery_request_seeker.html
+++ b/pages/delivery_request_seeker/delivery_request_seeker.html
@@ -131,8 +131,9 @@
                     <label for="schedule">
                         <h4>Schedule (date and time):</h4>
                     </label>
+                    <input type="checkbox" id="scheduleCheckbox"> Schedule delivery
                     <input type="datetime-local" class="datetime" id="scheduled_delivery_datetime" name="schedule"
-                        required>
+                        required style="display:none">
                 </div>
 
                 <div class="drop-off">
