Autofetch Request and others bug solved

--- a/pages/delivery_request_seeker/delivery_inprogress_rider.html
+++ b/pages/delivery_request_seeker/delivery_inprogress_rider.html
@@ -123,7 +123,7 @@
 
                 <div class="button-confirmation">
 
-                    <button id="submitButtonDeliveryCompleteRider" onclick="deliveryCompletedFinal();">
+                    <button class="submit" id="submitButtonDeliveryCompleteRider" onclick="deliveryCompletedFinal(); disabled">
                         Complete
                     </button>
 
