--- a/pages/delivery_request_seeker/delivery_request_seeker.html
+++ b/pages/delivery_request_seeker/delivery_request_seeker.html
@@ -141,8 +141,10 @@
                         <h4>Drop-off option:</h4>
                     </label>
                     <select class="drop-off-box" id="dropoff_option" name="dropoff_option">
-                        <option value="front_door">Front Door</option>
-                        <option value="receiver">Pickup</option>
+                        <option value="Front Door">Front Door</option>
+                        <option value="Back Door">Back Door</option>
+                        <option value="Reception">Reception</option>
+                        <option value="receiver">Pickup in Person</option>
                     </select>
                 </div>
 
