--- a/pages/history/history.html
+++ b/pages/history/history.html
@@ -57,18 +57,18 @@
             </ul>
         </nav>
     </header>
-    <div class="favio_AboutUsArrow">
-        <!-- add icon and add css here -->
+    <!-- <div class="favio_AboutUsArrow">
+        add icon and add css here
         <a href="javascript:history.back()">
             <i class="fa-solid fa-chevron-left"></i><span> back</span></button>
         </a>
 
-    </div>
+    </div> -->
 
     <div class="top-links">
         <ul>
-            <li><a href="#" onclick="showHistoryAll()">All</a></li>
-            <li><a href="#" onclick="showHistoryCompleted()">Completed</a></li>
+            <li><a href="#" onclick="showHistoryAll()"><span class="active-link" id="historyAllSpan">All</span></a></li>
+            <li><a href="#" onclick="showHistoryCompleted()"><span  id="historyCompletedSpan">Completed</span></a></li>
          </ul>
     </div>
     
