--- a/pages/settings/vehicle_settings.html
+++ b/pages/settings/vehicle_settings.html
@@ -46,12 +46,12 @@
         </nav>
     </header>
 <main>
-    <div class="favio_AboutUsArrow">
-        <!-- add icon and add css here -->
+    <!-- <div class="favio_AboutUsArrow">
+        add icon and add css here
         <a href="javascript:history.back()">
             <i class="fa-solid fa-chevron-left"></i><span> back</span></button>
         </a>
-    </div>
+    </div> -->
 
 </main>
 </body>
