--- a/pages/about_us/about_us.html
+++ b/pages/about_us/about_us.html
@@ -64,13 +64,13 @@
             <img src="./../../img/Favio.png" alt="Favio">
             <p>Your On Demand Local Courier</p>
         </div>
-        <div class="favio_AboutUsArrow">
-            <!-- add icon and add css here -->
+        <!-- <div class="favio_AboutUsArrow">
+            add icon and add css here
             <a href="javascript:history.back()">
                 <i class="fa-solid fa-chevron-left"></i><span> back</span></button>
             </a>
            
-        </div>
+        </div> -->
         <div class="favio_aboutUsMainDiv">
 
             <h2>ABOUT US</h2>
