--- a/pages/delivery_request_seeker/delivery_request_rider.html
+++ b/pages/delivery_request_seeker/delivery_request_rider.html
@@ -93,10 +93,10 @@
                     Todays Schedule
                 </h4>
                 <ul class="change-request" id="change-request">
-                    <li class="active"><a href="#request" onclick="showRequests()">Request</a></li>
-                    <li><a href="#scheduled" onclick="showScheduled()">Scheduled</a></li>
-                    <li><a href="#in-progress" onclick="showInProgress()">In progress</a></li>
-                    <li><a href="#complete" onclick="showCompleted()">Completed</a></li>
+                    <li class="active"><a href="#request" onclick="showRequests()"><span  id="requestSpan">Request</span></a></li>
+                    <li><a href="#scheduled" onclick="showScheduled()"><span id="scheduledSpan">Scheduled</span></a></li>
+                    <li><a href="#in-progress" onclick="showInProgress()"><span id="progressSpan">In Progress</span></a></li>
+                    <li><a href="#complete" onclick="showCompleted()"><span id="completedSpan">Completed</span></a></li>
                 </ul>
 
                 <div class="main-wrapper">
