--- a/pages/settings/profile.html
+++ b/pages/settings/profile.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Profile</title>
     <link rel="manifest" href="../../app.webmanifest">
 
     <link rel="stylesheet" href="./../../css/normalize.css">
@@ -60,13 +60,13 @@
     </header>
     <main>
         
-        <div class="favio_AboutUsArrow">
-            <!-- add icon and add css here -->
+        <!-- <div class="favio_AboutUsArrow">
+            add icon and add css here
             <a href="javascript:history.back()">
                 <i class="fa-solid fa-chevron-left"></i><span> back</span></button>
             </a>
 
-        </div>
+        </div> -->
 
         <div class="favio_profilemainDiv">
             <h1>Account Info</h1>
