--- a/pages/settings/settings.html
+++ b/pages/settings/settings.html
@@ -61,13 +61,13 @@
     </header>
 
     <main>
-        <div class="favio_AboutUsArrow" >
-            <!-- add icon and add css here -->
-            <!-- change seeting, about, history -->
+        <!-- <div class="favio_AboutUsArrow" >
+            add icon and add css here
+            change seeting, about, history
             <a href="javascript:history.back()">
                 <i class="fa-solid fa-chevron-left"></i><span> back</span></button>
             </a>
-        </div>
+        </div> -->
 
         <div class="favio_settingsMainDiv">
             <h1>Settings</h1>
