--- a/pages/settings/support.html
+++ b/pages/settings/support.html
@@ -62,13 +62,13 @@
 
 
     <main>
-        <div class="favio_AboutUsArrow">
-            <!-- add icon and add css here -->
+        <!-- <div class="favio_AboutUsArrow">
+            add icon and add css here
             <a href="javascript:history.back()">
                 <i class="fa-solid fa-chevron-left"></i><span> back</span></button>
             </a>
 
-        </div>
+        </div> -->
         <div class="favio_supportMain">
             <h1>Support</h1>
 
