--- a/pages/delivery_request_seeker/delivery_inprogress_rider.html
+++ b/pages/delivery_request_seeker/delivery_inprogress_rider.html
@@ -74,7 +74,7 @@
 
 
         <div class="content-grid">
-            
+
             <div class="main-content">
 
                 <div class="form-destination">
@@ -123,7 +123,7 @@
 
                 <div class="button-confirmation">
 
-                    <button id="submitButtonDeliveryCompleteRider" onclick="deliveryCompletedFinal();">
+                    <button class="submit" id="submitButton-complete" onclick="saveDeliveryRequest();">
                         Complete
                     </button>
 
