#34 Bug Solved : Seeker Image Popping up in Rider Confirm

--- a/pages/delivery_request_seeker/delivery_request_rider.html
+++ b/pages/delivery_request_seeker/delivery_request_rider.html
@@ -78,7 +78,8 @@
         <div class="availability-switch-position">
             <p>Availability</p>
             <div class="availabilitySwitch">
-                <input id="Favio_availabilityCheckBox" type="checkbox" checked>
+                <!-- <input id="Favio_availabilityCheckBox" type="checkbox" checked> -->
+                <input id="Favio_availabilityCheckBox" type="checkbox" >
                 <label for="Favio_availabilityCheckBox">
                     <span></span>
                 </label>
