add content to offline page

--- a/offline.html
+++ b/offline.html
@@ -11,6 +11,6 @@
     <link rel="stylesheet" href="./../css/style.css">
 </head>
 <body>
-    
+    <h1>Your are offine. Please check your internet connection.</h1>
 </body>
 </html>
