sw.js and drop off option bug solved

--- a/pages/delivery_request_seeker/delivery_request_seeker.html
+++ b/pages/delivery_request_seeker/delivery_request_seeker.html
@@ -144,7 +144,7 @@
                         <option value="Front Door">Front Door</option>
                         <option value="Back Door">Back Door</option>
                         <option value="Reception">Reception</option>
-                        <option value="receiver">Pickup in Person</option>
+                        <option value="Pickup in Person">Pickup in Person</option>
                     </select>
                 </div>
 
