--- a/offline.html
+++ b/offline.html
@@ -16,44 +16,193 @@
     <link rel="stylesheet" href="./css/offline.css">
 
 </head>
+<style>
+  * {
+    box-sizing: border-box;
+}
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    line-height: 1.5;
+    background-color: #07B875;
+}
+
+img {
+    width: 100%;
+}
+
+.wrapper {
+    display: flex;
+    flex-direction: column;
+}
+
+
+
+
+
+
+
+.circles {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+@keyframes animate {
+    0% {
+        opacity: 1;
+        border-radius: 0;
+        transform: translateY(0) rotate(0deg);
+    }
+
+    100% {
+        opacity: 0;
+        border-radius: 50%;
+        transform: translateY(-1000px) rotate(720deg);
+
+    }
+}
+
+.circles div {
+    position: absolute;
+    display: block;
+    width: 20px;
+    height: 20px;
+    background: rgba(255, 255, 255, 0.2);
+    bottom: -150px;
+    animation: animate 25s linear infinite;
+}
+
+.circles div:nth-child(1) {
+    left: 25%;
+    width: 80px;
+    height: 80px;
+    animation-delay: 0s;
+}
+
+.circles div:nth-child(2) {
+    left: 10%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 2s;
+    animation-duration: 12s;
+}
+
+.circles div:nth-child(3) {
+    left: 70%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 4s;
+}
+
+.circles div:nth-child(4) {
+    left: 40%;
+    width: 60px;
+    height: 60px;
+    animation-delay: 0s;
+    animation-duration: 18s;
+}
+
+.circles div:nth-child(5) {
+    left: 65%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 0s;
+}
+
+.circles div:nth-child(6) {
+    left: 75%;
+    width: 110px;
+    height: 110px;
+    animation-delay: 3s;
+}
+
+.circles div:nth-child(7) {
+    left: 35%;
+    width: 150px;
+    height: 150px;
+    animation-delay: 7s;
+}
+
+.circles div:nth-child(8) {
+    left: 50%;
+    width: 25px;
+    height: 25px;
+    animation-delay: 15s;
+    animation-duration: 45s;
+}
+
+.circles div:nth-child(9) {
+    left: 20%;
+    width: 15px;
+    height: 15px;
+    animation-delay: 2s;
+    animation-duration: 35s;
+}
+
+.circles div:nth-child(10) {
+    left: 85%;
+    width: 150px;
+    height: 150px;
+    animation-delay: 0s;
+    animation-duration: 11s;
+}
+
+
+
+
+
+.message {
+  position: relative;
+    z-index: 1;
+    display: flex;
+    flex-grow: 1;
+    justify-content: center;
+    align-items: center;
+     flex-direction: column;
+    height: 100vh;
+    margin: 1rem;
+}
+
+.message h1 {
+    color: #ffffff; 
+    font-size: 2.6rem;
+}
+
+.message p {
+    color: #ffffff; 
+    font-size: 1.6rem;
+}
+
+
+</style>
 <body>
-    <header>
-        <div class="logo" onclick="navigate_back_home()">
-                <img src="./../../img/Favio.png" alt="Favio">
+    <div class="wrapper">
+
+        <div class="circles">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
         </div>
 
-        <nav class="menu-main">
-            <ul>
-                <li>
-                    <a href="./index.html">
-                        <span class="active visually-hidden-text">Home</span>
-                    </a>
-                </li>
+        <div class="message">
 
-                <li>
-                    <a href="./pages/history/history.html">
-                        <span class="visually-hidden-text">History</span>
-                    </a>
-                </li>
+            <h1 >YOU ARE OFFLINE</h2>
+            <p >Please check your internet connection and reload the page</p>  
+        </div>
 
-                <li>
-                    <a href="./pages/about_us/about_us.html">
-                        <span class="visually-hidden-text">About Us</span>
-                    </a>
-                </li>
-
-                <li>
-                    <a href="./pages/settings/settings.html">
-                        <span class="visually-hidden-text">Settings</span>
-                    </a>
-                </li>
-
-                <button class="hamburger visually-hidden-hamburger">
-                    <span class="fas fa-bars"></span>
-                </button>
-            </ul>
-        </nav>
-    </header>
-    <h3>You are offline. Please check your internet connection.</h1>
+    </div>
+   
 </body>
 </html>
