--- a/pages/delivery_request_seeker/delivery_request_seeker.html
+++ b/pages/delivery_request_seeker/delivery_request_seeker.html
@@ -31,8 +31,9 @@
 
 
     <header>
-        <div class="logo" onclick="navigate_back_home()">
-                <img src="./../../img/Favio.png" alt="Favio">
+        <div class="logo" >
+            <a href="./../delivery_request_seeker/delivery_request_seeker.html"><img src="./../../img/Favio.png" alt="Favio">
+                </a>
         </div>
 
         <nav class="menu-main">
