--- a/pages/delivery_request_seeker/delivery_request_rider.html
+++ b/pages/delivery_request_seeker/delivery_request_rider.html
@@ -27,8 +27,8 @@
 
 
     <header>
-        <div class="logo" onclick="navigate_back_home()">
-                <img src="./../../img/Favio.png" alt="Favio">
+        <div class="logo">
+               <a href="./../delivery_request_seeker/delivery_request_rider.html"><img src="./../../img/Favio.png" alt="Favio"></a> 
         </div>
 
         <nav class="menu-main">
@@ -66,7 +66,7 @@
 
     <nav class="menu-mobile">
         <ul>
-            <li><a href="./../delivery_request_seeker/delivery_inprogress_rider.html">Home</a></li>
+            <li><a href="./../delivery_request_seeker/delivery_request_rider.html">Home</a></li>
             <li><a href="./../history/history.html">History</a></li>
             <li><a href="../about_us/about_us.html">About Us</a></li>
             <li><a href="">Settings</a></li>
