Bug Solved : #36 Hamburger menu not clickable

--- a/pages/settings/settings.html
+++ b/pages/settings/settings.html
@@ -60,6 +60,15 @@
         </nav>
     </header>
 
+    <nav class="menu-mobile">
+        <ul>
+            <li><a href="./../delivery_request_seeker/delivery_request_rider.html">Home</a></li>
+            <li><a href="./../history/history.html">History</a></li>
+            <li><a href="../about_us/about_us.html">About Us</a></li>
+            <li><a href="">Settings</a></li>
+        </ul>
+    </nav>
+
     <main>
         <!-- <div class="favio_AboutUsArrow" >
             add icon and add css here
