Adjust margin of headings and set hover on card close #41 #42

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
                     <div class="user-type">
                         <input type="radio" id="driver-no" name="driver" value="no" required checked="checked" />
-                        <label for="driver-no">Favio Seeker</label>
+                        <label for="driver-no">Favio Sender</label>
 
                         <input type="radio" id="driver-yes" name="driver" value="yes" required>
                         <label for="driver-yes">Favio Rider</label>
