--- a/pages/registration/select-vehicle-driver.html
+++ b/pages/registration/select-vehicle-driver.html
@@ -80,22 +80,31 @@
         
                 <h1>Choose your vehicle using Favio</h1>
                 <div class="favio_SelectVehicle">
-                    <div>
-                        <input type="radio" id="transit" name="vehicle" value="Transit" required>
-                        <label for="transit">
-                            <img src="https://firebasestorage.googleapis.com/v0/b/favio-6345f.appspot.com/o/illustration%2FVehicle-Transit.png?alt=media&token=a5e5a8b1-62ce-40e3-8e26-4526ece901c7" alt="">
-                        </label>
-                    </div>
-                    <div>        
+                    <div class="card">        
                         <input type="radio" id="bike" name="vehicle" value="Bike or Scooter" required>
                         <label for="bike">
                             <img src="https://firebasestorage.googleapis.com/v0/b/favio-6345f.appspot.com/o/illustration%2FVehicle-Scooter.png?alt=media&token=4b3693e6-8f8b-4046-8a69-1eb87c96e42d" alt="">
+                            <p class="vehicle-name">Bikes or Scooters</p>
+                            <p class="vehicle-weight-capacity">Weight: up to 2kg</p>
+                            <p class="vehicle-size-capacity">Size: up to 20cm</p>
                         </label>
                     </div>
-                    <div>
+                    <div class="card">
                         <input type="radio" id="car" name="vehicle" value="Car" required>
                         <label for="car">
                             <img src="https://firebasestorage.googleapis.com/v0/b/favio-6345f.appspot.com/o/illustration%2FVehicle-Car.png?alt=media&token=77f90ef9-f20a-4f0d-9756-e2b4a64fa087" alt="">
+                            <p class="vehicle-name">Car</p>
+                            <p class="vehicle-weight-capacity">Weight: up to 30kg</p>
+                            <p class="vehicle-size-capacity">Size: up to 150cm</p>
+                        </label>
+                    </div>
+                    <div class="card">
+                        <input type="radio" id="transit" name="vehicle" value="Transit" required>
+                        <label for="transit">
+                            <img src="https://firebasestorage.googleapis.com/v0/b/favio-6345f.appspot.com/o/illustration%2FVehicle-Transit.png?alt=media&token=a5e5a8b1-62ce-40e3-8e26-4526ece901c7" alt="">
+                            <p class="vehicle-name">Transit</p>
+                            <p class="vehicle-weight-capacity">Weight: up to 2kg</p>
+                            <p class="vehicle-size-capacity">Size: up to 50cm</p>
                         </label>
                     </div>
                 </div>
