--- a/pages/delivery_request_seeker/delivery_request_seeker.html
+++ b/pages/delivery_request_seeker/delivery_request_seeker.html
@@ -157,9 +157,9 @@
                 </div>
 
                 <div id="delivery-info">
-                    <p> <strong>Distance: </strong> <span id="estimatedDistance"><span> </p>
-                    <p> <strong>Estimated Time: </strong> <span id="estimatedTime">.<span> </p>
-                    <p> <strong>Total: $</strong> <span id="estimatedTotal"><span> </p>
+                    <p> Distance: = <span id="estimatedDistance"><span> </p>
+                    <p> Estimated Time: =<span id="estimatedTime">.<span> </p>
+                    <p class="totalPrice"> Total: $ <span id="estimatedTotal"><span> </p>
 
                 </div>
 
