Added progress tracking styling in both seeker and rider

--- a/pages/delivery_request_seeker/delivery_inprogress_rider.html
+++ b/pages/delivery_request_seeker/delivery_inprogress_rider.html
@@ -97,7 +97,7 @@
                     </div>
                 </div>
 
-                <form action="" id="progressTracking">
+                <!-- <form action="" id="progressTracking">
                     <input type="checkbox" id="deliveryStart" name="deliveryStart" value="deliveryStart" checked
                         disabled>
                     <label for="deliveryStart"> Delivery Start</label><br>
@@ -105,7 +105,15 @@
                     <label for="inProgress"> In Progress</label><br>
                     <input type="checkbox" id="deliveryComplete" name="deliveryComplete" value="deliveryComplete">
                     <label for="deliveryComplete">Delivery Complete</label><br><br>
-                </form>
+                </form> -->
+
+                <div class="pt">
+                    <ul>
+                        <li><span class="active">Delivery Start</span></li>
+                        <li><span  >In Progress</span></li>
+                        <li><span  >Delivery Complete</span></li>
+                    </ul>
+                </div>
 
                 <div id="completedImageWrapper">
                     <img src="" alt="Completed Image" id="completedImage" style="display: none;">
