--- a/pages/delivery_request_seeker/delivery_inprogress_seeker.html
+++ b/pages/delivery_request_seeker/delivery_inprogress_seeker.html
@@ -99,9 +99,17 @@
                     </div>
                 </div>
 
-                <div id="progressTracking">
+                <!-- <div id="progressTracking">
 
 
+                </div> -->
+
+                <div class="pt">
+                    <ul>
+                        <li><span class="active">Delivery Start</span></li>
+                        <li><span  >In Progress</span></li>
+                        <li><span  >Delivery Complete</span></li>
+                    </ul>
                 </div>
 
 
